# homelab

./: .envrc  .gitignore  .gitleaksignore  .kube_config.yaml.enc  .sops.yaml  README.md  devenv.nix  flake.nix
ansible/: .gitignore  README.md  ansible.cfg  inventory.yaml  k3s_cluster.yaml  k3s_uninstall.yaml  kversion.yaml  mikrotik_update.yaml  requirements.yml  setup_host.yaml  setup_k8s.yaml  setup_k8s.yaml.bak  setup_k8s_lvm.yaml  update_resolv.yaml  update_system.yaml
helmfile/apps/: backup.yml  es-cnpg-backup.yaml  helmfile.yaml  mongodb-account.yaml  postgres-pguser-ztnet.yaml  test.yaml
helmfile/charts/: ingress-nginx.yaml
helmfile/core/: helmfile.yaml
helmfile/env/: default.yaml  secrets.yaml
helmfile/media/: _pv.yaml  es-tls.yaml  es-volsync.yaml  helmfile.yaml  sc-longhorn-default.yaml
manifests/: README.md
manifests/monerod/: manifest-testnet.yaml  manifest.yaml
manifests/netbootxyz/: manifest.yaml
old/: README.md  k0sctl.yaml
provisions/: README.md  preseed-full.cfg  preseed.cfg
pydeploy/: pyproject.toml  vms.yaml
pydeploy/pydeploy/: main.py
scripts/: activate.sh  deactivate.sh  decrypt.sh  devenv.sh  env-tojson.sh  get_kubeconfig.sh  s3rm.py  secrets.activate  secrets.deactivate  unifi-setup.sh  zsh_init.zsh
secrets/prod/: kube_config.sops.yaml  (+3 more)
staging/: Vagrantfile  unbound.conf  unbound.sh
terraform/: .envrc  .gitignore  enc.env
tests/: busybox.yaml  demo-whoami-oauth2.yml  demo-whoami.yml  demo-whoami2.yml  es-volsync.yaml  longhorn-volume-snap.yaml  node_exporter.yaml  volsync-dst.yaml  volsync-src.yaml  whoami-cf.yaml
(+114 files in other folders)
